# HW-rpi3b-optee

./: .clang-format  .gitignore  README.md
common/: hello_algorithm.h  hello_command.h  hello_mask.h
env/aarch64-linux-gnu/lib/11/: collect2  g++-mapper-server  lto-wrapper
env/aarch64-linux-gnu/lib/glib-2.0/: gio-querymodules  glib-compile-schemas
env/aarch64-linux-gnu/lib/perl/5.34.0/: Config.pm  _h2ph_pre.ph
env/aarch64-linux-gnu/lib/perl/5.34.0/CORE/: config.h
env/aarch64-linux-gnu/lib/perl/5.34.0/asm-generic/: unistd.ph
env/aarch64-linux-gnu/lib/perl/5.34.0/bits/: floatn.ph
env/aarch64-linux-gnu/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc  uuid.pc
env/optee-sdk/ta_sdk/export-ta_arm64/host_include/: conf.cmake  conf.h  conf.mk
env/optee-sdk/ta_sdk/export-ta_arm64/mk/: conf.mk
env/optee-sdk/ta_sdk/export-ta_arm64/ta/: 023f8f1a-292a-432b-8fc4-de8471358067.ta  80a4c275-0a47-4905-8285-1486a9771a08.ta  f04a0fe7-1f5d-4b9b-abf7-619b85b4ce8c.ta  fd02c9da-306c-48c7-a49c-bbd827ae86ee.ta
ree/: CMakeLists.txt
ree/include/: common.h  ree_common.h  ree_invoke.h  ree_log.h
ree/src/: main.c  ree_invoke.c
tee/: Makefile  sub.mk  user_ta_header_defines.h
tee/include/: hello_world_ta.h  tee_gateway.h  tee_log.h
tee/src/: main.c  tee_gateway.c
